fix layout issues in mobile

--- a/components/home/events-section.module.scss
+++ b/components/home/events-section.module.scss
@@ -49,49 +49,63 @@
   border: 2px colors.$grayDark solid;
   background: colors.$bg;
   border-radius: 8px;
+  position: relative;
+}
 
-  .cardHeader {
+.cardHeader {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+
+  span {
+    font-size: 1.5rem;
+  }
+}
+
+.cardBody {
+  display: flex;
+  width: 100%;
+  gap: 12px;
+}
+
+.cardDetails {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
+
+  b {
+    font-weight: 500;
+  }
+
+  span,
+  div {
+    color: colors.$gray;
+  }
+
+  div {
     display: flex;
-    flex-direction: column;
-    gap: 4px;
-    justify-content: center;
+    gap: 6px;
     align-items: center;
-
-    span {
-      font-size: 1.5rem;
-    }
   }
+}
 
-  .cardBody {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    width: 100%;
-
-    b {
-      font-weight: 500;
-    }
-
-    span,
-    div {
-      color: colors.$gray;
-    }
-
-    div {
-      display: flex;
-      gap: 6px;
-      align-items: center;
-    }
-  }
-
-  .cardAttachments {
-    display: flex;
-    flex-direction: column;
-  }
+.cardAttachments {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: breakpoints.$xl) {
   .card {
     background: colors.$card;
+  }
+}
+
+@media (max-width: breakpoints.$sm) {
+  .cardBody {
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
