--- a/components/home/schedule-section.module.scss
+++ b/components/home/schedule-section.module.scss
@@ -11,17 +11,17 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-
-    div {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-    }
   }
 
   .note {
     color: colors.$gray;
   }
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
 .scheduleTable {
@@ -66,5 +66,11 @@
       text-align: right;
       grid-row: 1 / 3;
     }
+  }
+
+  .buttonGroup {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
   }
 }
